Version 3.17

* FEATURE: Added CommonCrypto for hashing as an alternative to OpenSSL.
* IMPROVEMENT: Removed deprecated interface KSI_Signature_getSignerIdentity.
* IMPROVEMENT: Added consistency tests for public include files (make include-test).
* IMPROVEMENT: Moved all implementation h-files into src/ksi/impl directory.
* IMPROVEMENT: Added deprecated and obsolete times to hash functions.
* IMPROVEMENT: SHA-1 is deprecated as of 01.07.2016T00:00 UTC.
* BUGFIX: Removed double close of the KSI_DataHasher when calculating the calendar hash chain.
* IMPROVEMENT: Added double close guards and tests for KSI_DataHasher.
* BUGFIX: Script rebuild-deb.sh works on Ubuntu.
* IMPROVEMENT: Debian packaging refactored.
* FEATURE: Support for non-blocking HTTP connection (with libcurl).
* IMPROVEMENT: Added support for OpenSSL 1.1 api.

Version 3.16

2017-11-21 release(3.16.2482)
* BUGFIX: Fixed EINTR (signal) issues with TCP and cURL.

2017-10-12 release(3.16.2475)
* BUGFIX: Fixed logging in net_http_curl.c when using 32-bit OS.
* FEATURE: Support for non-blocking TCP connection.
* IMPROVEMENT: Added an example for non-bloking signing.
* IMPROVEMENT: Debian package name contains debian version.
* IMPROVEMENT: Debian packaaging dependecies fixed.
* IMPROVEMENT: Debian changelog is generated from the main changelog.
* IMPROVEMENT: Libksi Debian/Ubuntu dependencies changed to make it work on both Debian 9 and Ubuntu 16.

Version 3.15

2017-09-12 release(3.15.2306)
* BUGFIX: Fixed creating HmacHasher failure with unimplemented hash algorithm.
* BUGFIX: Unable to create KSI_DataHash from digest if algorithm is not implemented.
* IMPROVEMENT: KSI_FTLV_memRead will parse and return more information when there's an error during parsing.
* IMPROVEMENT: Simplified integration test configuration (see integrationtest.conf.sample)
* BUGFIX: Fixed KSIEP over TCP failing.
* BUGFIX: Fixed clang static analyze findings.